--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -187,21 +187,19 @@
 <h3><span class="mw-headline" id="Navigace_gesty">Navigace gesty</span></h3>
 <p>Tento styl byl navr&#382;en pro pou&#382;it&iacute; s dotykovou obrazovkou a perem. Lze ho v&scaron;ak pou&#382;&iacute;t i s my&scaron;&iacute; a doporu&#269;uje se pro pou&#382;it&iacute; s po&#269;&iacute;ta&#269;i Mac s trackpadem.
 </p>
-<div class="mw-translate-fuzzy">
-<p>This navigation style was tailored for usability with touchscreen and pen, but is very usable with mouse too.
-</p>
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
 <tbody><tr>
-<th style="width:20%; background: #ededff; padding:2px 2px;">Select
+<th style="width:20%; background: #ededff; padding:2px 2px;">V&yacute;b&#283;r
 </th>
 <th style="width:20%; background: #ededff; padding:2px 2px;">Zoom
 </th>
-<th style="width:20%; background: #ededff; padding:2px 2px;">Rotate view
+<th style="width:20%; background: #ededff; padding:2px 2px;">Rotace pohledu
 </th>
-<th colspan="2" style="width:20%; background: #ededff; padding:2px 2px;">Pan
+<th colspan="2" style="width:20%; background: #ededff; padding:2px 2px;">Posun pohledu
 </th>
-<th style="width:20%; background: #ededff; padding:2px 2px;">Tilt view
-</th></tr>
+<th style="width:20%; background: #ededff; padding:2px 2px;">Naklon&#283;n&iacute; pohledu
+<div lang="en" dir="ltr" class="mw-content-ltr">
+</div></th></tr>
 <tr style="text-align:center;">
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Hand_cursor.png&amp;filetimestamp=20240917104542&amp;.html" class="mw-file-description"><img src="../File/Hand_cursor.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="24" data-file-height="24"></a></span>
 </td>
@@ -226,18 +224,31 @@
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
 <td>Press the left mouse button over an object you want to select.
-</td>
+
+<div lang="en" dir="ltr" class="mw-content-ltr">
+</div></td>
 <td>Use the mouse wheel to zoom in and out.
-</td>
+
+<div lang="en" dir="ltr" class="mw-content-ltr">
+<p>Clicking the middle mouse button re-centers the view on the location of the pointer. Alternatively, aim the pointer and press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">H</span> on the keyboard.
+</p>
+</div>
+<div lang="en" dir="ltr" class="mw-content-ltr">
+</div></td>
 <td>Hold the left mouse button, then move the pointer.
 <p>In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> and other edit modes, this behavior is disabled. Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> when pressing the mouse button to enter rotation mode.
-</p><p>To set the camera's focus point for rotation, click a point with the middle mouse button. Alternatively, aim the cursor at a point and press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">H</span> on the keyboard.
 </p>
-</td>
+
+<div lang="en" dir="ltr" class="mw-content-ltr">
+</div></td>
 <td colspan="2">Hold the right mouse button, then move the pointer.
-</td>
-<td>Hold both left and right mouse buttons, and then move the pointer sideways.
-</td></tr>
+
+<div lang="en" dir="ltr" class="mw-content-ltr">
+</div></td>
+<td>Hold both left and right mouse buttons, then move the pointer sideways.
+
+<div lang="en" dir="ltr" class="mw-content-ltr">
+</div></td></tr>
 <tr style="text-align:center;">
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Touch_Tap.svg&amp;filetimestamp=20150405224336&amp;.html" class="mw-file-description"><img src="../File/Touch_Tap.svg" decoding="async" width="100" height="100" class="mw-file-element" data-file-width="100" data-file-height="100"></a></span>
 </td>
@@ -253,80 +264,36 @@
 </td></tr>
 <tr style="vertical-align:top; background: #efffef;">
 <td>Tap to select.
-</td>
+
+<div lang="en" dir="ltr" class="mw-content-ltr">
+</div></td>
 <td>Drag two fingers (pinch) closer or farther apart.
-</td>
+
+<div lang="en" dir="ltr" class="mw-content-ltr">
+</div></td>
 <td>Drag with one finger to rotate.
+
+<div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> when in the <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a>.
 </p>
-</td>
+</div>
+<div lang="en" dir="ltr" class="mw-content-ltr">
+</div></td>
 <td colspan="2">Drag with two fingers.
+
+<div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Alternatively, tap and hold, then drag. This simulates the pan with the right mouse button.
 </p>
-</td>
+</div>
+<div lang="en" dir="ltr" class="mw-content-ltr">
+</div></td>
 <td>Rotate the imaginary line formed by two touch points.
-<p>On v0.18 this method is disabled by default. To enable, go to <b>Edit &rarr; Preferences &rarr; Display</b>, and untick "Disable touchscreen tilt gesture" checkbox.
-</p>
-</td></tr></tbody></table>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>|Select_text=Press the left mouse button over an object you want to select.
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>|Zoom_text=Use the mouse wheel to zoom in and out.
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Clicking the middle mouse button re-centers the view on the location of the pointer. Alternatively, aim the pointer and press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">H</span> on the keyboard.
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>|Rotate_view_text=Hold the left mouse button, then move the pointer.
-In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> and other edit modes, this behavior is disabled. Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> when pressing the mouse button to enter rotation mode.
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>|Pan_text=Hold the right mouse button, then move the pointer.
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>|Tilt_view_text=Hold both left and right mouse buttons, then move the pointer sideways.
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>|Select_gesture_text=Tap to select.
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>|Zoom_gesture_text=Drag two fingers (pinch) closer or farther apart.
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>|Rotate_view_gesture_text=Drag with one finger to rotate.
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> when in the <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a>.
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>|Pan_gesture_text=Drag with two fingers.
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Alternatively, tap and hold, then drag. This simulates the pan with the right mouse button.
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>|Tilt_view_gesture_text=Rotate the imaginary line formed by two touch points.
-</p>
-</div>
+
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>This method is disabled by default. To enable, go to <b>Edit &rarr; Preferences &rarr; Display &rarr; Navigation</b>, and uncheck the "Disable touchscreen tilt gesture" checkbox.
-}}
 </p>
-</div>
+</div></td></tr></tbody></table>
+
 <p><span id="Maya-Gesture_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="Maya-Gesture_Navigace">Maya-Gesture Navigace</span></h3>
@@ -1173,15 +1140,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111200335
+Cached time: 20260111200459
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.378 seconds
-Real time usage: 0.739 seconds
-Preprocessor visited node count: 1667/1000000
-Post&#8208;expand include size: 78528/2097152 bytes
-Template argument size: 28329/2097152 bytes
+CPU time usage: 0.333 seconds
+Real time usage: 0.509 seconds
+Preprocessor visited node count: 1637/1000000
+Post&#8208;expand include size: 78392/2097152 bytes
+Template argument size: 29093/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1189,19 +1156,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  122.880      1 -total
- 10.39%   12.772      8 Template:ASCII
-  9.45%   11.610      1 Template:Userdocnavi/cs
-  6.81%    8.369      1 Template:SiemensNX_Navigation
-  6.61%    8.121     78 Template:KEY
-  6.36%    7.819      1 Template:Touchpad_Navigation/cs
-  6.15%    7.562      1 Template:Inventor_Navigation/cs
-  5.45%    6.693      1 Template:OpenSCAD_Navigation
-  4.42%    5.432      1 Template:SolidWorks_Navigation
-  4.37%    5.364      1 Template:Touchpad_Navigation
+100.00%  104.296      1 -total
+  8.24%    8.592      8 Template:ASCII
+  7.67%    8.003      1 Template:OpenSCAD_Navigation
+  7.49%    7.814      1 Template:Userdocnavi/cs
+  7.34%    7.656      2 Template:OpenInventor_Navigation
+  5.90%    6.157      2 Template:Docnav
+  5.37%    5.603      1 Template:CAD_Navigation
+  4.54%    4.737      1 Template:Touchpad_Navigation/cs
+  4.50%    4.697     75 Template:KEY
+  4.35%    4.536      1 Template:SolidWorks_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111200334 and revision id 1735977. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111200458 and revision id 1735981. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
