--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -253,10 +253,8 @@
 <td>Klikn&#283;te pro v&yacute;b&#283;r.
 </td>
 <td>P&#345;ibli&#382;te nebo oddalte dva prsty (&scaron;t&iacute;pnut&iacute;).
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Drag with one finger to rotate.
-
+</td>
+<td>P&#345;eje&#271;te prstem a oto&#269;te.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> when in the <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a>.
 </p>
@@ -1124,15 +1122,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111201327
+Cached time: 20260111201420
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.342 seconds
-Real time usage: 0.469 seconds
-Preprocessor visited node count: 1629/1000000
-Post&#8208;expand include size: 78054/2097152 bytes
-Template argument size: 28755/2097152 bytes
+CPU time usage: 0.305 seconds
+Real time usage: 0.577 seconds
+Preprocessor visited node count: 1628/1000000
+Post&#8208;expand include size: 77994/2097152 bytes
+Template argument size: 28695/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1140,19 +1138,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   95.494      1 -total
- 11.73%   11.203      8 Template:ASCII
-  8.75%    8.352      1 Template:Userdocnavi/cs
-  7.37%    7.037      1 Template:SolidWorks_Navigation
-  6.03%    5.757      1 Template:OpenSCAD_Navigation
-  5.54%    5.289      1 Template:TinkerCAD_Navigation
-  5.10%    4.874     75 Template:KEY
-  5.09%    4.859      1 Template:SiemensNX_Navigation
-  4.59%    4.387      1 Template:Touchpad_Navigation/cs
-  4.23%    4.044      2 Template:OpenInventor_Navigation
+100.00%  112.806      1 -total
+ 11.70%   13.202      8 Template:ASCII
+ 10.69%   12.060      1 Template:Inventor_Navigation/cs
+ 10.43%   11.764      1 Template:Userdocnavi/cs
+  8.32%    9.382      1 Template:Blender_Navigation
+  8.15%    9.189      1 Template:OpenSCAD_Navigation
+  7.44%    8.392      1 Template:SiemensNX_Navigation
+  3.68%    4.156      1 Template:VersionMinus
+  3.66%    4.134     75 Template:KEY
+  3.35%    3.782      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201326 and revision id 1736017. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201420 and revision id 1736019. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
