--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -255,10 +255,8 @@
 <td>P&#345;ibli&#382;te nebo oddalte dva prsty (&scaron;t&iacute;pnut&iacute;).
 </td>
 <td>P&#345;eje&#271;te prstem a oto&#269;te.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> when in the <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a>.
+<p>Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> v re&#382;imu <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcheru</a>.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td colspan="2">Drag with two fingers.
@@ -1122,15 +1120,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111201420
+Cached time: 20260111201505
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.305 seconds
-Real time usage: 0.577 seconds
-Preprocessor visited node count: 1628/1000000
-Post&#8208;expand include size: 77994/2097152 bytes
-Template argument size: 28695/2097152 bytes
+CPU time usage: 0.312 seconds
+Real time usage: 0.465 seconds
+Preprocessor visited node count: 1627/1000000
+Post&#8208;expand include size: 77953/2097152 bytes
+Template argument size: 28654/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1138,19 +1136,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  112.806      1 -total
- 11.70%   13.202      8 Template:ASCII
- 10.69%   12.060      1 Template:Inventor_Navigation/cs
- 10.43%   11.764      1 Template:Userdocnavi/cs
-  8.32%    9.382      1 Template:Blender_Navigation
-  8.15%    9.189      1 Template:OpenSCAD_Navigation
-  7.44%    8.392      1 Template:SiemensNX_Navigation
-  3.68%    4.156      1 Template:VersionMinus
-  3.66%    4.134     75 Template:KEY
-  3.35%    3.782      1 Template:Navigation_menu_2
+100.00%   82.717      1 -total
+ 13.93%   11.524      1 Template:SolidWorks_Navigation
+ 12.99%   10.744      8 Template:ASCII
+ 10.37%    8.578      1 Template:SiemensNX_Navigation
+  7.90%    6.533      1 Template:Userdocnavi/cs
+  4.25%    3.516      1 Template:Inventor_Navigation/cs
+  4.24%    3.506     75 Template:KEY
+  3.86%    3.189      1 Template:Gesture_Navigation
+  3.69%    3.055      1 Template:OpenSCAD_Navigation
+  3.66%    3.024      1 Template:CAD_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201420 and revision id 1736019. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201504 and revision id 1736021. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
