--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -261,10 +261,8 @@
 <td colspan="2">P&#345;et&aacute;hn&#283;te dv&#283;ma prsty.
 <p>Alternativn&#283; m&#367;&#382;ete klepnout a podr&#382;et prst a pot&eacute; t&aacute;hnout. T&iacute;m simulujete posun prav&yacute;m tla&#269;&iacute;tkem my&scaron;i.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Rotate the imaginary line formed by two touch points.
-
+</td>
+<td>Oto&#269;te pomyslnou &#269;&aacute;ru tvo&#345;enou dv&#283;ma dotykov&yacute;mi body.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>This method is disabled by default. To enable, go to <b>Edit &rarr; Preferences &rarr; Display &rarr; Navigation</b>, and uncheck the "Disable touchscreen tilt gesture" checkbox.
 </p>
@@ -1116,15 +1114,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111201710
+Cached time: 20260111201739
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.297 seconds
-Real time usage: 0.419 seconds
-Preprocessor visited node count: 1625/1000000
-Post&#8208;expand include size: 77868/2097152 bytes
-Template argument size: 28569/2097152 bytes
+CPU time usage: 0.268 seconds
+Real time usage: 0.360 seconds
+Preprocessor visited node count: 1624/1000000
+Post&#8208;expand include size: 77817/2097152 bytes
+Template argument size: 28518/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1132,19 +1130,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.148      1 -total
- 12.83%    6.690      8 Template:ASCII
- 10.83%    5.647      1 Template:Userdocnavi/cs
-  7.10%    3.705      2 Template:Docnav
-  6.78%    3.535     75 Template:KEY
-  5.19%    2.705      1 Template:OpenSCAD_Navigation
-  4.91%    2.560      1 Template:Revit_Navigation
-  4.57%    2.381      1 Template:Inventor_Navigation/cs
-  4.35%    2.271      1 Template:Navigation_menu_2
-  3.95%    2.059      1 Template:Blender_Navigation
+100.00%   53.871      1 -total
+ 13.55%    7.300      8 Template:ASCII
+  8.83%    4.758      1 Template:Userdocnavi/cs
+  7.44%    4.008      1 Template:OpenSCAD_Navigation
+  5.36%    2.889     75 Template:KEY
+  4.57%    2.463      1 Template:Gesture_Navigation
+  4.32%    2.327      1 Template:Blender_Navigation
+  4.25%    2.292      1 Template:SolidWorks_Navigation
+  4.20%    2.265      1 Template:Inventor_Navigation/cs
+  4.06%    2.187      1 Template:Touchpad_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201710 and revision id 1736025. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201738 and revision id 1736027. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
