--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -268,7 +268,7 @@
 </td></tr></tbody></table>
 <p><span id="Maya-Gesture_navigation"></span>
 </p>
-<h3><span class="mw-headline" id="Maya-Gesture_Navigace">Maya-Gesture Navigace</span></h3>
+<h3><span id="Navigace_pomoc.C3.AD_Maya-gest"></span><span class="mw-headline" id="Navigace_pomoc&iacute;_Maya-gest">Navigace pomoc&iacute; Maya-gest</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>In Maya-Gesture Navigation, panning, zooming, and rotating the view require the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> key together with a mouse button; therefore, a three-button mouse is required. It's also possible to use gestures as this style was developed over the <a href="#Gesture_navigation">Gesture navigation</a> style.
 </p>
@@ -1112,12 +1112,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202009
+Cached time: 20260111202117
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.310 seconds
-Real time usage: 0.412 seconds
+CPU time usage: 0.307 seconds
+Real time usage: 0.786 seconds
 Preprocessor visited node count: 1623/1000000
 Post&#8208;expand include size: 77841/2097152 bytes
 Template argument size: 28542/2097152 bytes
@@ -1128,19 +1128,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.513      1 -total
- 13.94%    7.597      8 Template:ASCII
-  9.28%    5.061      1 Template:Userdocnavi/cs
-  6.04%    3.295      1 Template:OpenSCAD_Navigation
-  5.92%    3.230     75 Template:KEY
-  4.35%    2.370      1 Template:TOCright
-  4.29%    2.337      1 Template:CAD_Navigation
-  4.26%    2.324      1 Template:Blender_Navigation
-  4.04%    2.204      1 Template:Touchpad_Navigation
-  3.94%    2.148      1 Template:Touchpad_Navigation/cs
+100.00%  125.891      1 -total
+ 12.63%   15.900      8 Template:ASCII
+  7.61%    9.586      1 Template:Userdocnavi/cs
+  6.89%    8.669      2 Template:OpenInventor_Navigation
+  5.49%    6.911      1 Template:OpenCascade_Navigation
+  5.22%    6.574     75 Template:KEY
+  4.97%    6.257      1 Template:SiemensNX_Navigation
+  4.56%    5.739      1 Template:OpenSCAD_Navigation
+  4.53%    5.698      1 Template:Revit_Navigation
+  4.44%    5.586      1 Template:Inventor_Navigation/cs
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202009 and revision id 1736029. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202116 and revision id 1736031. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
