--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -309,10 +309,8 @@
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
 <td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td colspan="2">Use the mouse wheel to zoom in and out.
-
+</td>
+<td colspan="2">Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat pohled.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Alternatively, hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> and the right mouse button, then move the pointer.
 </p>
@@ -1087,15 +1085,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202657
+Cached time: 20260111202752
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.305 seconds
-Real time usage: 0.437 seconds
-Preprocessor visited node count: 1584/1000000
-Post&#8208;expand include size: 77494/2097152 bytes
-Template argument size: 29725/2097152 bytes
+CPU time usage: 0.285 seconds
+Real time usage: 0.426 seconds
+Preprocessor visited node count: 1583/1000000
+Post&#8208;expand include size: 77463/2097152 bytes
+Template argument size: 29694/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1103,19 +1101,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  122.774      1 -total
- 10.20%   12.525      2 Template:OpenInventor_Navigation
-  9.14%   11.226      1 Template:Userdocnavi/cs
-  8.36%   10.263      8 Template:ASCII
-  7.68%    9.428      1 Template:Inventor_Navigation/cs
-  6.38%    7.829      1 Template:OpenSCAD_Navigation
-  5.37%    6.596      1 Template:MayaGesture_Navigation
-  5.37%    6.595      1 Template:SolidWorks_Navigation
-  5.15%    6.324      1 Template:Revit_Navigation
-  5.08%    6.235      1 Template:OpenCascade_Navigation
+100.00%   80.274      1 -total
+ 12.09%    9.709      8 Template:ASCII
+  8.99%    7.218      1 Template:Userdocnavi/cs
+  6.06%    4.867      1 Template:MayaGesture_Navigation
+  5.86%    4.708      1 Template:Blender_Navigation
+  5.67%    4.552      1 Template:OpenCascade_Navigation
+  5.59%    4.486      1 Template:Inventor_Navigation/cs
+  5.59%    4.484      1 Template:Gesture_Navigation
+  5.50%    4.416      1 Template:OpenSCAD_Navigation
+  4.60%    3.692      1 Template:CAD_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202656 and revision id 1736054. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202752 and revision id 1736059. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
