--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -1,6 +1,6 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw Workbench/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw Module (0% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_Workbench.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Workbench (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Teknik Resim Tezgah&#305; (0% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Banco de Trabajo Dibujo T&eacute;cnico (15% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
@@ -228,10 +228,8 @@
 <p><span id="Limitations"></span>
 </p>
 <h2><span id="Einschr.C3.A4nkungen"></span><span class="mw-headline" id="Einschr&auml;nkungen">Einschr&auml;nkungen</span></h2>
-<div class="mw-translate-fuzzy">
 <ul><li>TechDraw-Objekte sollten nicht in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> kopiert und eingef&uuml;gt werden, da dies im Allgemeinen nicht gut funktioniert.</li>
 <li>TechDraw-Objekte sollten nicht mit der Maus in die (der?) <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> gezogen werden.</li></ul>
-</div>
 <p><span id="Tutorials"></span>
 </p>
 <h2><span class="mw-headline" id="Anleitungen">Anleitungen</span></h2>
@@ -293,34 +291,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202808
+Cached time: 20260111202840
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.281 seconds
-Real time usage: 0.384 seconds
-Preprocessor visited node count: 871/1000000
+CPU time usage: 0.274 seconds
+Real time usage: 0.439 seconds
+Preprocessor visited node count: 870/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4458/5000000 bytes
+Unstrip post&#8208;expand size: 4462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.813      1 -total
- 33.97%   11.825      1 Template:TechDraw_Tools_navi/de
- 20.37%    7.091     25 Template:Version/de
- 15.66%    5.450      2 Template:Navigation_menu_2
- 10.38%    3.615      1 Template:Userdocnavi/de
- 10.13%    3.526      2 Template:Docnav/de
-  7.22%    2.512      5 Template:VersionPlus/de
-  4.48%    1.559      1 Template:TOCright
-  3.88%    1.349      1 Template:KEY
+100.00%   23.444      1 -total
+ 32.16%    7.539      1 Template:TechDraw_Tools_navi/de
+ 16.44%    3.854      2 Template:Navigation_menu_2
+ 14.82%    3.474      5 Template:VersionPlus/de
+ 13.87%    3.251      2 Template:Docnav/de
+ 11.36%    2.662     25 Template:Version/de
+  6.34%    1.486      1 Template:TOCright
+  6.11%    1.432      1 Template:Userdocnavi/de
+  5.29%    1.241      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111202808 and revision id 1736061. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111202839 and revision id 1736065. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
