--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -312,11 +312,8 @@
 </td>
 <td colspan="2">Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat pohled.
 <p>Alternativn&#283; podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> a prav&eacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
+</p><p>Kliknut&iacute;m na prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i se zobrazen&iacute; znovu vycentruje na pozici ukazatele. Alternativn&#283; m&#367;&#382;ete nam&iacute;&#345;it ukazatel a stisknout kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">H</span> na kl&aacute;vesnici.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Clicking the middle mouse button re-centers the view on the location of the pointer. Alternatively, aim the pointer and press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">H</span> on the keyboard.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> and the left mouse button, then move the pointer.
@@ -1083,15 +1080,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202817
+Cached time: 20260111202853
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.313 seconds
-Real time usage: 0.488 seconds
-Preprocessor visited node count: 1582/1000000
-Post&#8208;expand include size: 77423/2097152 bytes
-Template argument size: 29654/2097152 bytes
+CPU time usage: 0.272 seconds
+Real time usage: 0.460 seconds
+Preprocessor visited node count: 1581/1000000
+Post&#8208;expand include size: 77399/2097152 bytes
+Template argument size: 29630/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1099,19 +1096,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  104.960      1 -total
- 14.92%   15.664      8 Template:ASCII
-  7.07%    7.419      1 Template:Userdocnavi/cs
-  6.73%    7.066      1 Template:Revit_Navigation
-  6.60%    6.928      1 Template:SolidWorks_Navigation
-  6.16%    6.461      1 Template:OpenSCAD_Navigation
-  5.80%    6.087      1 Template:Inventor_Navigation/cs
-  5.21%    5.464      2 Template:OpenInventor_Navigation
-  4.73%    4.962      1 Template:OpenCascade_Navigation
-  4.68%    4.914      1 Template:SiemensNX_Navigation
+100.00%  132.520      1 -total
+ 11.65%   15.437      1 Template:Userdocnavi/cs
+ 10.37%   13.737      8 Template:ASCII
+  9.07%   12.015      1 Template:Touchpad_Navigation
+  7.31%    9.686      1 Template:SolidWorks_Navigation
+  6.59%    8.737      1 Template:SiemensNX_Navigation
+  6.32%    8.372      1 Template:Touchpad_Navigation/cs
+  5.58%    7.400      2 Template:OpenInventor_Navigation
+  5.17%    6.851      1 Template:Blender_Navigation
+  4.75%    6.293      1 Template:OpenSCAD_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202817 and revision id 1736063. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202852 and revision id 1736067. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
